; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_log.c_sys_syslog.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_log.c_sys_syslog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@log_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_syslog(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = call i32 @lock(i32* @log_lock)
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @do_syslog(i32 %9, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = call i32 @unlock(i32* @log_lock)
  %14 = load i32, i32* %7, align 4
  ret i32 %14
}

declare dso_local i32 @lock(i32*) #1

declare dso_local i32 @do_syslog(i32, i32, i32) #1

declare dso_local i32 @unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
